# at-labra

./: .coveragerc  .pylintrc  README.md  pyproject.toml
dokumentaatio/: maarittely.md
dokumentaatio/viikkoraportit/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md
src/: a_star.py  algo.py  algo_service.py  config.py  dijkstra.py  index.py  jps.py  main_service.py  map_service.py  ui.py
src/tests/: a_star_test.py  algo_service_test.py  dijkstra_test.py  map_service_test.py
